Fixed Mobile Layout Bug

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -10,6 +10,7 @@
             background-color: rgba(0, 0, 0, 0.8);
             padding: 20px;
             margin-top: 20px;
+            border-radius: 4px;
         }
     }
 }
@@ -41,7 +42,8 @@
             padding-right: 15px;
 
             .main {
-                padding: 20px 5px;
+                margin: 20px 4px;
+                padding: 20px 4px;
             }
         }
     }
